<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/parent_scroll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/movie_orig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig_avengers" />

        <ImageView
            android:id="@+id/movie_mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/movie_orig"
            app:layout_constraintEnd_toEndOf="@+id/movie_orig"
            app:layout_constraintStart_toStartOf="@+id/movie_orig"
            app:layout_constraintTop_toTopOf="@+id/movie_orig"
            app:srcCompat="@drawable/movie_mask" />


        <TextView
            android:id="@+id/back_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="56dp"
            android:drawablePadding="8dp"

            android:fontFamily="@font/roboto"
            android:text="@string/text_back"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal"
            app:drawableStartCompat="@drawable/path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="16sp" />

        <TextView
            android:id="@+id/prev_movie_pg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/pg_rectangle"
            android:elegantTextHeight="false"
            android:fontFamily="@font/baloo"
            android:text="@string/avengers_pg"
            android:textColor="@color/movie_name_color"
            app:layout_constraintBottom_toTopOf="@+id/movie_title"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:lineHeight="14sp" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="254dp"
            android:elegantTextHeight="false"
            android:fontFamily="@font/roboto"
            android:text="@string/avengers_end_game"
            android:textColor="@color/movie_name_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movie_orig"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_orig"
            app:lineHeight="40dp" />

        <TextView
            android:id="@+id/movie_tags"
            style="@style/pink_tag"
            android:layout_marginTop="4dp"
            android:text="@string/movie_tag"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/movie_title"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            app:lineHeight="20dp" />

        <com.idlestar.ratingstar.RatingStarView
            android:id="@+id/prev_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/movie_tags"
            app:layout_constraintTop_toBottomOf="@id/movie_tags"
            app:rsv_cornerRadius="2dp"
            app:rsv_drawStrokeForEmptyStar="false"
            app:rsv_drawStrokeForFullStar="false"
            app:rsv_drawStrokeForHalfStar="false"
            app:rsv_enableSelectRating="true"
            app:rsv_rating="4"
            app:rsv_starBackgroundColor="#6D6D80"

            app:rsv_starForegroundColor="#FF3365"
            app:rsv_starMargin="2dp"
            app:rsv_starNum="5" />


        <TextView
            android:id="@+id/movie_reviews"
            style="@style/grey_text_prevs_and_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="bottom"
            android:text="@string/avengers_reviews_count"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/prev_movie_rating"
            app:layout_constraintStart_toEndOf="@+id/prev_movie_rating"
            app:layout_constraintTop_toTopOf="@+id/prev_movie_rating" />

        <TextView
            android:id="@+id/movie_description_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="false"
            android:text="@string/movie_storyline"
            android:textColor="@color/movie_name_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/prev_movie_rating" />

        <TextView
            android:id="@+id/movie_story_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/description_text"
            android:textAlignment="textStart"
            android:textColor="@color/description_text_color"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_description_title" />

        <TextView
            android:id="@+id/movie_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/movie_cast"
            android:textColor="@color/movie_name_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_story_line"
            app:layout_constraintTop_toBottomOf="@+id/movie_story_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_actors_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginStart="11dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_cast"
            tools:itemCount="4"
            tools:listitem="@layout/vh_actor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>