<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardMovie"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="14dp"
    android:layout_margin="8dp"
    android:padding="2dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="false">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/radial_gradient">

        <ImageView
            android:id="@+id/iv_prev_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/prev_avengers" />

        <ImageView
            android:id="@+id/movie_prev_poster_mask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_prev_poster_mask" />

        <TextView
            android:id="@+id/prev_movie_pg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/pg_rectangle"
            android:elegantTextHeight="false"
            android:fontFamily="@font/baloo"
            android:text="@string/avengers_pg"
            android:textColor="@color/movie_name_color"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="14sp" />

        <TextView
            android:id="@+id/prev_tags"
            style="@style/pink_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="214dp"
            android:gravity="center|start"
            android:text="@string/movie_tag"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_prev_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.idlestar.ratingstar.RatingStarView
            android:id="@+id/prev_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/prev_tags"
            app:layout_constraintTop_toBottomOf="@id/prev_tags"
            app:rsv_cornerRadius="2dp"
            app:rsv_drawStrokeForEmptyStar="false"
            app:rsv_drawStrokeForFullStar="false"
            app:rsv_drawStrokeForHalfStar="false"
            app:rsv_rating="4"
            app:rsv_starBackgroundColor="#6D6D80"
            app:rsv_starForegroundColor="#FF3365"
            app:rsv_starMargin="2dp"
            app:rsv_starNum="5" />

        <TextView
            android:id="@+id/prev_reviews"
            style="@style/grey_text_prevs_and_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/avengers_reviews_count"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/prev_movie_rating"
            app:layout_constraintStart_toEndOf="@+id/prev_movie_rating"
            app:layout_constraintTop_toTopOf="@+id/prev_movie_rating" />

        <TextView
            android:id="@+id/prev_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:text="@string/avengers_end_game"
            android:textColor="@color/movie_name_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_prev_poster" />

        <TextView
            android:id="@+id/prev_film_duration"
            style="@style/grey_text_prevs_and_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prev_avengers_duration"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/prev_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/prev_movie_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>